<resources>
    <string name="app_name">Message in a bubble</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_message">Message</string>
    <string name="prompt_friend_username">Friend\'s username</string>

    <string name="action_send">Send</string>
    <string name="action_log_in">Log in</string>
    <string name="action_create_account">Create an account</string>
    <string name="action_register">Register</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_passwords_do_not_match">The passwords don\'t match</string>
</resources>
